<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMXL</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="title_section_profiles">Profiles</string>
    <string name="aPropos">About</string>
    <string name="texteHomme">Man</string>
    <string name="texteFemme">Woman</string>
    <string name="sectionProfileDetail">File</string>
    <string name="measure">Measures</string>
    <string name="garments">Wardrobe</string>
    <string name="profile">Profile</string>
    <string name="title_section_measures">Measures</string>

    <string name="libBust">Bust</string>
    <string name="libHeight">Height</string>
    <string name="libWeight">Weight</string>
    <string name="libChest">Chest</string>
    <string name="libWaist">Waist</string>
    <string name="libHips">Hips</string>
    <string name="measurements">Measurements</string>
    <string name="libCollar">Neck</string>
    <string name="libSleeve">Sleeve</string>
    <string name="libInseam">Leg</string>
    <string name="libFeet">Feet</string>
    <string name="libthigh">Thigh</string>

    <string name="changeMeasure">Enter value</string>
    <string name="libTaillePopup">Actual height</string><!--sapu-->
    <string name="libBoutonRetour">Back</string>
    <string name="shareDialogTitle">Share</string>
    <string name="shareDialogEmail">Mail</string>
    <string name="shareDialogSms">SMS</string>
    <string name="shareDialogOK">Share</string>
    <string name="shareDialogCancel">Cancel</string>
    <string name="saveGarment">Save</string>
    <string name="addGarmentOK">Garment add to your collection</string>
    <string name="addGarmentKO">Unable to add to your collection</string>
    <string name="settings">Settings</string>
    <string name="libUnit">Unit</string>
    <string name="majProfile">Profile update</string>
    <string name="libImc">BMI</string>
    <string name="unimplemented">Developing&#8230;</string>
    <string name="addNote">Shipping address</string><!--Add a description, a comment&#8230;-->
    <string name="ShoeSize">Size</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profil_detail">ProfilDetailActivity</string>
    <string name="title_activity_add_measure">AddMeasure</string>
    <string name="createProfil">Create new profile</string>
    <string name="title_activity_measure_pager">Measures</string>
    <string name="title_activity_share_profil">ShareProfil</string>
    <string name="title_activity_csvcreation">CSVCreationActivity</string>
    <string name="title_activity_import_profil">SMXL - Import Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_account">Create Your Account</string>
    <string name="importProfile">Import Profile</string>
    <string name="remove">Remove</string>
    <string name="message_delete_garment">Do you want to remove this garment ?</string>
    <string name="incompleteProfile">You must enter first and last name</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Lastname</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="addMeasure">Add Measure</string>
    <string name="addGarment">Add Garment</string>
    <string name="removeGarment">Do you want to remove this profile ?</string>
    <string name="viewMore">View more</string>
    <string name="libPointure">Pointure</string>
    <string name="remarque">Notes</string>
    <string name="mesurer">How to mesure</string>
    <string name="title_activity_add_garment">Add garment</string>
    <string name="title_choose_category">Choose a category of garment</string>
    <string name="title_choose_garment">Choose a type of garment</string>
    <string name="add_garment">Add garment</string>
    <string name="update">Update</string>
    <string name="edit_garment">Edit garment</string>
    <string name="title_choose_brand">Choose a brand</string>
    <string name="title_summary">Summary</string>
    <string name="description_add_garment">Comments for this garment</string>
    <string name="validate">Validate</string>
    <string name="title_activity_add_measure_fragment">AddMeasureFragment</string>
    <string name="add_measure">Add measure</string>
    <string name="title_activity_list_garment">ListGarmentActivity</string>
    <string name="my_clothes">My clothes</string>
    <string name="title_activity_display_garment">My garment</string>
    <string name="remove_garment">Delete this garment ?</string>


    <string name="no_user">Create your profile !</string>
    <string name="notes">Notes</string>
    <string name="buttonNextStep">Next Step</string>
    <string name="size_guide">Size Guide</string>
    <string name="title_activity_size_guide">SizeGuideActivity</string>
    <string name="title_activity_select_brands">Select your favorite brands</string>
    <string name="manage_favorite_brands">Manage your favorite brands</string>
    <string name="favorite_brands">Favorite brands</string>
    <string name="all_Brands">All brands</string>

    <string name="garment">Garment</string>
    <string name="brand">Brand</string>

    <string name="returnCreate">Press back again to cancel</string>
    <string name="newProfile1">Add</string>
    <string name="newProfile2">Profile</string>

    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="years">years old</string>

    <string name="select_category">Sort by category</string>

    <string name="facebook_app_id">893068277430661</string>
    <string name="title_activity_connexion">Connexion</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="create_account">Create Account!</string>
    <string name="show_password">Show Password</string>
    <string name="checkingAvailability">Checking account availability&#8230;</string>
    <string name="alreadyExistingAccount">Account already exists!</string>
    <string name="errorRetrievingAccount">Error retrieving account!</string>
    <string name="retrieving_account">Retrieving Account&#8230;</string>
    <string name="wrong_email">Wrong Email!</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="no_connexion">Check your connexion!</string>
    <string name="disconnected">Disconnected!</string>
    <string name="email_not_valid">This is not a valid Email!</string>
    <string name="password_not_valid">Password must be at least 6 characters long!</string>

    <string name="jacket">Jacket</string>
    <string name="search">Search</string>
    <string name="title_activity_browser">BrowserActivity</string>

    <string name="my_profiles">My Profiles</string>
    <string name="my_profile">My Profile</string>
    <string name="my_measurements">My Measurements</string>
    <string name="my_wardrobe">My Wardrobe</string>
    <string name="title_activity_quicksize">QuicksizeActivity</string>

    <!--translation from database-->
    <string name="BLOUSON">Jacket</string>
    <string name="CHAUSSURE">Shoes</string>
    <string name="CHEMISE">Shirt</string>
    <string name="CHEMISIER">Blouse</string>
    <string name="COSTUME">Suit</string>
    <string name="JEANS">Jeans</string>
    <string name="MANTEAU">Coat</string>
    <string name="PANTALON">Pants</string>
    <string name="PULL">Sweater</string>
    <string name="SHORT">Shorts</string>
    <string name="SLIP">UnderPants</string>
    <string name="SWEATER">Hoodie</string>
    <string name="TSHIRT">T-Shirt</string>
    <string name="VESTE">Vest</string>
    <string name="JUPE">Skirt</string>
    <string name="ROBE">Dress</string>
    <string name="SOUTIEN_GORGE">Bra</string>
    <string name="MAILLOTS_DE_BAIN">swimwear</string>

    <string name="nc">N/C</string>
    <string name="Coat">Coat</string>
    <string name="addColor">Add Color</string>
    <string name="favoriteColor">Favorite Color</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="libFoot">Foot</string>
    <string name="wrong_username">Wrong Email!</string>

    <string name="Dress_Skirt">Dresses/Skirts</string>
    <string name="Tshirt">T-shirts</string>
    <string name="Pants_Shorts">Pants/Shorts</string>
    <string name="Blouse">Shirts/Blouses</string>
    <string name="Jacket_Coat">Jackets/Coats</string>
    <string name="Vest">Vest</string>
    <string name="Shoes">Shoes</string>
    <string name="Sweater_Hoodie">Sweater/Hoodies</string>
    <string name="Underwear">Underwear</string>
    <string name="Suit">Suits</string>
    <string name="addBrandToFavorite">Add to favorite brands</string>
    <string name="goToWebsite">Go to website</string>
    <string name="title_quickmeasurefragment">Set your size</string>
    <string name="libGO">GO !</string>
    <string name="cm">cm</string>
    <string name="shoe_size">size</string>
    <string name="quicksize">QuickSize</string>
    <string name="removeBrand">Remove From Favorite Brands</string>

    <string name="shareProfile">Share your main profile!</string>
    <string name="code">Code : </string>
    <string name="obtainProfile">Obtain a friend\'s profile by entering his code here :</string>
    <string name="getProfile">Get!</string>
    <string name="share">Share</string>
    <string name="title_activity_create_facebook_profile">CreateFacebookProfile</string>
    <string name="step">Step</string>
    <string name="brand_already_selected">Brand has already been selected .</string>
    <string name="max_brands_selected">You already have 5 Favorites Brands .</string>
    <string name="not_enough_brands_selected">Please choose more Brands .</string>
    <string name="ok">OK</string>
    <string name="select_brand_popup_message">Please choose from 2 to 5 Favorites Brands</string>
    <string name="quickmeasure_popup_message">Choose a Brand per garment and enter your size to unlock the QuickSize .</string>
    <string name="Share">Share</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="title_sharing_activity">SharingActivity</string>
    <string name="profile_import_success">Profile was imported successfully .</string>
    <string name="profile_import_already_exist">You already have this profile</string>
    <string name="profile_import_not_exist">Couldn\'t find a profile with this code.</string>
    <string name="tuto_mobile_title">No more surprises !</string>
    <string name="Jacket">Jacket</string>
    <string name="title_activity_wishlist">AddWishListActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="inclompleteBirthDate">You must enter your birthdate</string>
    <string name="empty_wishlist">The wishlist is empty .</string>
    <string name="missingMeasures">Missing Measures</string>
    <string name="message_enter_measures">Enter your Quicksize measurements in your profile or directly using the Measurement tab :</string>
    <string name="couldnt_create_user_local">Error : User couldn\'t be created locally .</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="blogs">Blogs</string>
    <string name="shopOnLine">Shop On Line</string>

</resources>
