<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aerolitec.SMXL.ui.activity.ProfilDetailActivity"
        tools:ignore="MergeRootFrame"
        android:layout_below="@+id/tableLayout">
    </FrameLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange_border">
            <LinearLayout
                android:id="@+id/profile"
                android:layout_height="40dp"
                android:layout_width="0dp"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="0.5dp"
                android:clickable="true">
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/profile"
                    android:textSize="17sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/wardrobe"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="0.5dp"
                android:layout_marginLeft="0.5dp"
                android:clickable="true">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/garments"
                    android:gravity="center"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/tvNbGarments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="17sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/measurements"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="0.5dp"
                android:clickable="true">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/measure"
                    android:textSize="17sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:background="#C43D0A"
            android:minHeight="5dp"
            />
    </TableLayout>


</RelativeLayout>